--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -13,19 +13,19 @@ jobs:
         uses: actions/checkout@v4
 
   maven:
-  runs-on: ubuntu-latest
-  steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v4
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: "17"
+          distribution: "temurin"
 
-    - name: Build with Maven
-      run: mvn -B compile
+      - name: Build with Maven
+        run: mvn -B compile
 
   security-check:
     runs-on: ubuntu-latest
@@ -34,19 +34,20 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Trivy Installation
+      - name: Install Trivy
         run: |
+          sudo apt-get update -y
           sudo apt-get install -y wget apt-transport-https gnupg lsb-release
           wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
           echo "deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main" | sudo tee /etc/apt/sources.list.d/trivy.list
           sudo apt-get update -y
           sudo apt-get install -y trivy
 
-      - name: Trivy FS Scan
-        run: trivy fs --format table -o fs-report.json .
+      - name: Trivy File System Scan
+        run: trivy fs --format json -o fs-report.json .
 
-      - name: Gitleaks Installation
-        run: sudo apt install -y gitleaks
+      - name: Install Gitleaks
+        run: sudo apt-get install -y gitleaks
 
       - name: Gitleaks Code Scan
-        run: gitleaks detect --source . --report-format json --report-path gitleaks-report.json
+        run: gitleaks detect -s . -r gitleaks-report.json -f json
